--- a/app/src/main/res/layout/dou_activity_welcome.xml
+++ b/app/src/main/res/layout/dou_activity_welcome.xml
@@ -49,6 +49,7 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_gravity="bottom|end"
+            android:layout_marginBottom="10dp"
             style="@style/FabStyle"/>
 
     </android.support.design.widget.CoordinatorLayout>
